# forrs-backend

./: .gitignore  Cargo.toml  Forrs.example.toml  README.md  Rocket.toml
src/: config.rs  db.rs  error.rs  main.rs  rest.rs
src/error/: launch.rs  user.rs
