[package]
name = "forrs-backend"
version = "0.1.0"
authors = ["Follpvosten <wolfi@karpador.xyz>"]
edition = "2018"

[features]
default = []
big-numbers = ["forrs-data/big-numbers"]

[dependencies]
forrs-data = { git = "https://github.com/forrs/forrs-data", features = ["postgres"] }
rocket = { git="https://github.com/SergioBenitez/Rocket.git", branch="async" }
rocket_contrib = { git="https://github.com/SergioBenitez/Rocket.git", branch="async" }
tokio-postgres = "0.5.0-alpha.1"
tokio = "0.2.0-alpha.6"
futures-preview = { version = "=0.3.0-alpha.19", features = ["async-await"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.5"
chrono = { version = "0.4", features = ["serde"] }